--- a/package.json
+++ b/package.json
@@ -6,19 +6,49 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --dir src",
+    "lint:fix": "next lint --dir src --fix",
+    "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "@mantine/core": "^5.1.1",
+    "@mantine/dates": "^5.1.1",
+    "@mantine/form": "^5.1.1",
+    "@mantine/hooks": "^5.1.1",
+    "@mantine/next": "^5.1.1",
+    "@mantine/notifications": "^5.1.1",
+    "@supabase/supabase-js": "^1.35.6",
+    "axios": "^0.27.2",
+    "date-fns": "^2.29.1",
+    "dayjs": "^1.11.4",
     "next": "12.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-query": "^4.0.0-beta.10",
+    "tabler-icons-react": "^1.54.0",
+    "yup": "^0.32.11",
+    "zustand": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "18.7.1",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-tailwindcss": "^3.6.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
+  },
+  "volta": {
+    "node": "16.16.0",
+    "npm": "8.17.0"
   }
 }
