--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "zustand": "^4.0.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.3.1",
     "@types/node": "18.7.1",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
